# firefox-bookmark-extractor

./: LICENSE.md  README.md  pyproject.toml
firefox_bookmark_extractor/: extractor.py
