[tool.poetry]
name = "firefox_bookmark_extractor"
version = "0.1.0"
description = ""
authors = ["Mikko Uuksulainen <mikko.uuksulainen@uuksu.fi>"]
readme = "README.rst"

[tool.poetry.scripts]
extractor = "firefox_bookmark_extractor.extractor:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
