[tool.poetry]
name = "firefox_bookmark_extractor"
version = "1.0.0"
description = "Firefox Bookmark Extractor can be used to extract urls from Firefox bookmarks. Scripts taps to Firefox's internal database and extracts data from required bookmark path."
authors = ["Mikko Uuksulainen <mikko.uuksulainen@uuksu.fi>"]
readme = "README.md"
repository = "https://github.com/uuksu/firefox-bookmark-extractor"

[tool.poetry.scripts]
firefox-bookmark-extractor = "firefox_bookmark_extractor.extractor:main"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
